--- a/MTDGame/MTDGame.csproj
+++ b/MTDGame/MTDGame.csproj
@@ -42,6 +42,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Camera.cs" />
+    <Compile Include="CollisionController.cs" />
+    <Compile Include="TextureLoader.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.manifest" />
