--- a/MTDGame/MTDGame.csproj
+++ b/MTDGame/MTDGame.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Camera.cs" />
     <Compile Include="CollisionController.cs" />
     <Compile Include="TextureLoader.cs" />
+    <Compile Include="IO.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.manifest" />
