--- a/MTDGame/MTDGame.csproj
+++ b/MTDGame/MTDGame.csproj
@@ -38,26 +38,19 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Game1.cs" />
-    <Compile Include="IEntity.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Player.cs" />
     <Compile Include="Camera.cs" />
-    <Compile Include="CollisionController.cs" />
-    <Compile Include="ScreenManager\GameScreen.cs" />
-    <Compile Include="ScreenManager\InputState.cs" />
-    <Compile Include="ScreenManager\ScreenManager.cs" />
-    <Compile Include="Screens\BackgroundScreen.cs" />
-    <Compile Include="Screens\GameplayScreen.cs" />
-    <Compile Include="Screens\LoadingScreen.cs" />
-    <Compile Include="Screens\MainMenuScreen.cs" />
-    <Compile Include="Screens\MenuEntry.cs" />
-    <Compile Include="Screens\MenuScreen.cs" />
-    <Compile Include="Screens\MessageBoxScreen.cs" />
-    <Compile Include="Screens\PlayerEndexEventArgs.cs" />
-    <Compile Include="TextureLoader.cs" />
     <Compile Include="IO.cs" />
-    <Compile Include="Building.cs" />
+    <Compile Include="Controllers\CollisionController.cs" />
+    <Compile Include="Controllers\EnemyController.cs" />
+    <Compile Include="Controllers\EntityManager.cs" />
+    <Compile Include="Controllers\TextureLoader.cs" />
+    <Compile Include="Entities\Building.cs" />
+    <Compile Include="Entities\Bullet.cs" />
+    <Compile Include="Entities\Enemy.cs" />
+    <Compile Include="Entities\IEntity.cs" />
+    <Compile Include="Entities\Player.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.manifest" />
