--- a/MTDGame/MTDGame.csproj
+++ b/MTDGame/MTDGame.csproj
@@ -42,6 +42,9 @@
     <Compile Include="Entities\ICollidesWith.cs" />
     <Compile Include="Entities\ShootingEnemy.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="IItem.cs" />
+    <Compile Include="Inventory.cs" />
+    <Compile Include="Pistol.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Camera.cs" />
@@ -55,6 +58,7 @@
     <Compile Include="Entities\Enemy.cs" />
     <Compile Include="Entities\IEntity.cs" />
     <Compile Include="Entities\Player.cs" />
+    <Compile Include="Weapon.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.manifest" />
