--- a/MTDGame/MTDGame.csproj
+++ b/MTDGame/MTDGame.csproj
@@ -37,10 +37,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Components\Box.cs" />
+    <Compile Include="Components\Collidable.cs" />
     <Compile Include="Components\Health.cs" />
     <Compile Include="Components\Inventory.cs" />
     <Compile Include="Components\Movement.cs" />
+    <Compile Include="Components\Position.cs" />
     <Compile Include="Components\Score.cs" />
     <Compile Include="Components\Transform.cs" />
     <Compile Include="Components\Weapon.cs" />
