--- a/MTDGame/MTDGame.csproj
+++ b/MTDGame/MTDGame.csproj
@@ -55,6 +55,7 @@
     <Compile Include="IComponentEntity.cs" />
     <Compile Include="IItem.cs" />
     <Compile Include="Pistol.cs" />
+    <Compile Include="PlayerInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Camera.cs" />
